--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --background: #f5f5f5;
+  --primary: #185E55;
+}
+
+body{
+  background: var(--background);
+  color: var(--primary);
+  margin: 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -9,4 +20,10 @@ a {
 
 * {
   box-sizing: border-box;
+  padding: 0
+}
+
+//Custom Utility Classes
+.background-tint {
+  background: #f4f4f4;
 }
