--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,10 @@ body{
   margin: 0;
 }
 
+body.backdrop-no-scroll {
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -23,7 +27,23 @@ a {
   padding: 0
 }
 
-//Custom Utility Classes
+.list{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* Custom Utility Classes */
 .background-tint {
   background: #f4f4f4;
+}
+
+.slides {
+  display: flex;
+  align-items: center;
+  overflow-x: scroll !important;
+  overflow-y: hidden;
+  gap: 10px;
+  width: 100vw;
+  height: auto;
 }
